force-app/main/default/objects/Invoice_Line_Item__c/fields/AG_OG__c.field-meta.xml
<CustomField>
    <fullName>AG_OG__c</fullName>
    <label>AG/OG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>