force-app/main/default/objects/Invoice_Line_Item__c/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Case</label>
    <referenceTo>Business_Case__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>