force-app/main/default/objects/Invoice_Line_Item__c/fields/Customer_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Order Product</label>
    <referenceTo>MD_OrderItem__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>