force-app/main/default/objects/Invoice_Line_Item__c/fields/DGroup__c.field-meta.xml
<CustomField>
    <fullName>DGroup__c</fullName>
    <label>DGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>