force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Customer_Code__c</fullName>
    <label>Invoice Customer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>