force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Material_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Material_No__c</fullName>
    <label>Material No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>