force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_MRP_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_MRP_Price__c</fullName>
    <label>MRP Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>