force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Net_Price__c</fullName>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>