force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Old_Material__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Old_Material__c</fullName>
    <label>Old Material No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>