force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>