force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_SubGroup__c.field-meta.xml
<CustomField>
    <fullName>Invoice_SubGroup__c</fullName>
    <label>SubGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>