force-app/main/default/objects/Invoice_Line_Item__c/fields/Is_Instrument__c.field-meta.xml
<CustomField>
    <fullName>Is_Instrument__c</fullName>
    <description>Will be marked as true if the material is instrument</description>
    <formula>CONTAINS(UPPER(AG_OG__c), &quot;INS&quot;)</formula>
    <label>Is Instrument?</label>
    <type>Checkbox</type>
</CustomField>