force-app/main/default/objects/Invoice_Line_Item__c/fields/Mat_Grp_3__c.field-meta.xml
<CustomField>
    <fullName>Mat_Grp_3__c</fullName>
    <label>Mat Grp 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>