force-app/main/default/objects/Invoice_Line_Item__c/fields/Mat_Grp_Desc_1__c.field-meta.xml
<CustomField>
    <fullName>Mat_Grp_Desc_1__c</fullName>
    <label>Mat Grp Desc 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>