force-app/main/default/objects/Invoice_Line_Item__c/fields/Material_Group__c.field-meta.xml
<CustomField>
    <fullName>Material_Group__c</fullName>
    <label>Material Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>