force-app/main/default/objects/Invoice_Line_Item__c/fields/Material_Master__c.field-meta.xml
<CustomField>
    <fullName>Material_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Master</label>
    <referenceTo>MD_Product2__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>