force-app/main/default/objects/Invoice_Line_Item__c/fields/Supplier_Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Batch_No__c</fullName>
    <label>Supplier Batch No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>