force-app/main/default/objects/Invoice_Line_Item__c/fields/Top_Group__c.field-meta.xml
<CustomField>
    <fullName>Top_Group__c</fullName>
    <label>Top Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>