force-app/main/default/objects/Invoice_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>Invoice_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>